--- a/src/scss/style.css
+++ b/src/scss/style.css
@@ -1016,6 +1016,252 @@ header.fix-head .header-bottom .header-additions.show {
   }
 }
 
+footer {
+  margin-top: 20px;
+  padding-top: 40px;
+}
+footer .foot-nav {
+  padding: 32px 0;
+  border-top: 1px solid #ececec;
+  display: grid;
+  grid-template-columns: repeat(2, 1fr);
+  gap: 24px;
+}
+footer .foot-nav div h3 {
+  padding: 0 0 16px;
+  line-height: 1.5;
+  font-weight: 600;
+  font-size: 18px;
+}
+footer .foot-nav div h3 a {
+  color: #000;
+}
+footer .foot-nav div ul li {
+  padding: 0 0 8px;
+  font-size: 16px;
+  line-height: 1.43;
+}
+footer .foot-nav div ul li a {
+  color: rgba(0, 0, 0, 0.5019607843);
+}
+footer .foot-top {
+  border-bottom: 1px solid #ececec;
+  padding: 15px 0;
+}
+footer .foot-top .socials {
+  height: 40px;
+  text-align: center;
+  box-sizing: content-box;
+}
+footer .foot-top .socials li {
+  margin: 0 4px;
+  display: inline-block;
+}
+footer .foot-top .socials li a {
+  display: block;
+  width: 40px;
+  height: 40px;
+  border-radius: 50%;
+  background: #f3f1f7 no-repeat center;
+  transition: all 0.2s cubic-bezier(0.52, 0.01, 0.16, 1);
+}
+footer .foot-top .show-mobile {
+  padding: 20px;
+}
+footer .foot-top .show-mobile ul {
+  display: flex;
+  border-radius: 5px;
+  border: 1px solid #ececec;
+  background-color: #fff;
+  margin-top: 10px;
+}
+footer .foot-top .show-mobile ul li {
+  position: relative;
+  width: 100%;
+}
+footer .foot-top .show-mobile ul li:not(:first-child)::before {
+  content: "";
+  display: block;
+  width: 1px;
+  height: 60%;
+  position: absolute;
+  left: 0;
+  top: 20%;
+  background-color: rgba(0, 0, 0, 0.1490196078);
+}
+footer .foot-top .show-mobile ul li a {
+  display: block;
+  padding: 4px;
+  white-space: nowrap;
+  color: #000;
+}
+footer .foot-top .show-mobile ul li a .app {
+  padding: 4px 0;
+  width: -moz-fit-content;
+  width: fit-content;
+  margin: 0 auto;
+}
+@media (min-width: 375px) {
+  footer .foot-top .show-mobile ul li a .app {
+    background: no-repeat left 12px/15px;
+    padding: 4px 0 4px 24px;
+  }
+  footer .foot-top .show-mobile ul li a .app.apple {
+    background-image: url("../../public/images/apple.svg");
+  }
+  footer .foot-top .show-mobile ul li a .app.android {
+    background-image: url("../../public/images/google_play.svg");
+    background-position-y: 15px;
+  }
+  footer .foot-top .show-mobile ul li a .app.huawei {
+    background-image: url("../../public/images/huawei_play.svg");
+    background-position-y: 15.5px;
+  }
+}
+footer .foot-top .show-mobile ul li a .app span {
+  opacity: 0.5;
+  color: #505050;
+  font-size: 11px;
+}
+footer .foot-top .show-mobile ul li a .app p {
+  font-size: 16px;
+  position: relative;
+  top: -3px;
+  color: #505050;
+  opacity: 0.5;
+  letter-spacing: -0.4px;
+  line-height: 9px;
+  font-family: "TT Commons Medium";
+}
+@media (min-width: 992px) {
+  footer .foot-top .show-mobile ul {
+    height: 55px;
+    position: absolute;
+    bottom: 45px;
+    left: 15px;
+  }
+  footer .foot-top .show-mobile ul li a {
+    padding: 2px 6px 0 6px;
+  }
+  footer .foot-top .show-mobile ul li a .app {
+    background-size: auto;
+    padding: 6px 0 6px 34px;
+    background-position-y: 8px;
+  }
+  footer .foot-top .show-mobile ul li a .app.android {
+    background-position-y: 11px;
+  }
+  footer .foot-top .show-mobile ul li a .app.huawei {
+    background-position-y: 13.5px;
+    background-size: 24px;
+  }
+  footer .foot-top .show-mobile ul li a .app span {
+    font-size: 12px;
+  }
+}
+@media (min-width: 1024px) {
+  footer .foot-top .show-mobile ul {
+    left: 45px;
+  }
+}
+@media (min-width: 576px) {
+  footer .foot-top .show-mobile {
+    display: none;
+  }
+}
+footer .foot-top .contact {
+  padding: 20px 0 0 0;
+  text-align: center;
+  display: flex;
+  justify-content: space-between;
+}
+footer .foot-top .contact .c-item {
+  width: 50%;
+}
+footer .foot-top .contact .c-item:first-child {
+  display: none;
+}
+footer .foot-top .contact .c-item p {
+  color: rgba(0, 0, 0, 0.5019607843);
+  line-height: 19px;
+}
+footer .foot-top .contact .c-item b {
+  font-family: "TT Commons Medium";
+  font-weight: normal;
+}
+footer .foot-top .contact .c-item b a {
+  color: #000;
+}
+footer .foot-bottom {
+  padding: 30px 0 40px;
+  text-align: center;
+}
+footer .foot-bottom .logo {
+  display: inline-block;
+  margin-bottom: 10px;
+  width: 150px;
+  height: 36px;
+}
+footer .foot-bottom .logo img {
+  -o-object-fit: contain;
+     object-fit: contain;
+}
+footer .foot-bottom ul li {
+  display: inline-block;
+  margin: 0 10px;
+  font-size: 14px;
+}
+footer .foot-bottom ul li p {
+  color: rgba(0, 0, 0, 0.5019607843);
+  display: inline-block;
+}
+footer .foot-bottom ul li a {
+  color: rgba(0, 0, 0, 0.5019607843);
+  text-decoration: underline;
+}
+footer .foot-bottom .me {
+  margin-top: 10px;
+  color: rgba(0, 0, 0, 0.5019607843);
+}
+footer .foot-bottom .me p {
+  display: inline-block;
+}
+footer .foot-bottom .me a {
+  display: inline-block;
+  color: rgba(0, 0, 0, 0.6);
+  text-decoration: underline;
+}
+@media (min-width: 992px) {
+  footer {
+    margin-top: 50px;
+  }
+  footer .foot-nav {
+    grid-template-columns: repeat(4, 1fr);
+  }
+  footer .foot-nav div h3 {
+    font-size: 27px;
+  }
+  footer .foot-top {
+    display: flex;
+    justify-content: space-between;
+  }
+  footer .foot-top .socials {
+    padding: 5px 0;
+  }
+  footer .foot-top .contact {
+    padding: 0;
+    width: 50%;
+  }
+  footer .foot-top .contact .c-item {
+    text-align: left;
+    width: -moz-fit-content;
+    width: fit-content;
+  }
+  footer .foot-top .contact .c-item:first-child {
+    display: block;
+  }
+}
+
 .modals {
   position: fixed;
   width: 100%;
