--- a/src/scss/pages/_news.scss
+++ b/src/scss/pages/_news.scss
@@ -17,7 +17,48 @@ header .header-bottom .header-main .right-side .menu-toggle {
       li {
         margin-bottom: 20px;
         .news-item {
-          @extend %news-item;
+            @extend %news-item;
+            a{
+            position: relative;
+            .dropdown{
+                position: absolute;
+                top: 10px;
+                right: 0;
+                button{
+                    width: 30px;
+                    height: 20px;
+                    background: no-repeat center;
+                    cursor: pointer;
+                
+                }
+                .menu{
+                    position: absolute;
+                    left: -155%;
+                    top: 25px;
+                    z-index: 2;
+                    border-radius: 5px;
+                    overflow: hidden;
+                    background-color: rgb(219, 219, 219);
+                    opacity: 0;
+                    visibility: hidden;
+                    &.show{
+                        opacity: 1;
+                        visibility: visible;
+                    }
+                    li{
+                        width: auto;
+                        margin: 0;
+                        font-family: "TT Commons Bold";
+                        padding: 6px 6px 0 25px ;
+                        background: no-repeat 10% center / 16px;
+                        color: $black_50;
+                        &:hover{
+                            background-color: $socials_bg_color;
+                        }
+                    }
+                }
+            }
+          }
         }
       }
     }
