--- a/src/scss/style.css
+++ b/src/scss/style.css
@@ -2541,6 +2541,46 @@ header .header-bottom .header-main .right-side .menu-toggle {
 .news .context .news-list-total li {
   margin-bottom: 20px;
 }
+.news .context .news-list-total li .news-item a {
+  position: relative;
+}
+.news .context .news-list-total li .news-item a .dropdown {
+  position: absolute;
+  top: 10px;
+  right: 0;
+}
+.news .context .news-list-total li .news-item a .dropdown button {
+  width: 30px;
+  height: 20px;
+  background: no-repeat center;
+  cursor: pointer;
+}
+.news .context .news-list-total li .news-item a .dropdown .menu {
+  position: absolute;
+  left: -155%;
+  top: 25px;
+  z-index: 2;
+  border-radius: 5px;
+  overflow: hidden;
+  background-color: rgb(219, 219, 219);
+  opacity: 0;
+  visibility: hidden;
+}
+.news .context .news-list-total li .news-item a .dropdown .menu.show {
+  opacity: 1;
+  visibility: visible;
+}
+.news .context .news-list-total li .news-item a .dropdown .menu li {
+  width: auto;
+  margin: 0;
+  font-family: "TT Commons Bold";
+  padding: 6px 6px 0 25px;
+  background: no-repeat 10% center/16px;
+  color: rgba(0, 0, 0, 0.5019607843);
+}
+.news .context .news-list-total li .news-item a .dropdown .menu li:hover {
+  background-color: #F3F1F7;
+}
 @media (min-width: 992px) {
   .news {
     padding-top: 150px;
