--- a/src/scss/pages/_news.scss
+++ b/src/scss/pages/_news.scss
@@ -1,15 +1,37 @@
 header .header-bottom .header-main .right-side .menu-toggle {
   display: none;
 }
-
+body{
+  &.o-hidden{
+    overflow: hidden;
+  }
+}
 .news {
   padding-top: 135px;
   .common-title {
     margin-bottom: 20px;
-    text-align: center;
+    position: relative;
     h1 {
       font-size: 20px;
+      margin-left: 10px;
       font-family: "TTFirsNeue Medium";
+    }
+    @media (min-width:425px) {
+      text-align: center;
+      h1{
+        margin-left: 0;
+      }
+    }
+    button{
+      position: absolute;
+      right: 20px;
+      top: 50%;
+      transform: translateY(-50%);
+      background-color: $primary_color;
+      padding: 12px 20px;
+      border-radius: 5px;
+      font-family: "TT Commons Bold";
+      cursor: pointer;
     }
   }
   .context {
@@ -67,6 +89,7 @@ header .header-bottom .header-main .right-side .menu-toggle {
     padding-top: 150px;
     .common-title {
       margin-bottom: 50px;
+      text-align: center;
       h1 {
         font-size: 54px;
       }
@@ -90,6 +113,110 @@ header .header-bottom .header-main .right-side .menu-toggle {
       }
       .more-details{
         font-size: 16px;
+      }
+    }
+  }
+}
+.loader {
+  font-size: 20px;
+  text-align: center;
+  &.hide{
+    opacity: 0;
+    visibility: hidden;
+  }
+}
+
+.ellipsis {
+  animation: ellipsis-animation 2s linear infinite;
+  opacity: 0;
+}
+
+.news-modal {
+  position: absolute;
+  z-index: 999999;
+  width: 100%;
+  height: 100%;
+  top: 0;
+  left: 0;
+  bottom: 0;
+  right: 0;
+  background-color: rgba(0, 0, 0, 0.6196078431);
+  overflow: hidden;
+  opacity: 0;
+  visibility: hidden;
+  transition: all 0.2s cubic-bezier(.52, .01, .16, 1);
+  &.show {
+      opacity: 1;
+      visibility: visible;
+  }
+  .modal{
+    border: 8px solid $primary_color;
+    background-color: $primary_color;
+    border-radius: 10px;
+    max-width: 600px;
+    margin: 0 auto;
+    margin-top: 100px;
+    .modal-inner{
+      padding: 20px;
+      border-radius: 6px;
+      background-color: #fff;
+      position: relative;
+      .close-news-modal{
+        button{
+          position: absolute;
+          right: 5px;
+          top: 5px;
+          width: 16px;
+          cursor: pointer;
+          img{
+            filter: invert(1);
+          }
+        }
+      }
+      .modal-content{
+        .content-title{
+          text-align: center;
+          h2{
+            font-family: "TT Commons Bold";
+          }
+        }
+        .content-text{
+          form{
+            @include Flexible($f-dir:column);
+            .group{
+              label{
+                display: block;
+                font-family: "TT Commons Medium";
+                font-size: 18px;
+                line-height: normal;
+              }
+              textarea{
+                display: block;
+                width: calc(100% - 24px);
+                min-height: 40px;
+                border-radius: 5px;
+                border: 1px solid $primary_color;
+                padding: 6px 12px;
+                resize: none;
+                font-size: 16px;
+                font-family: "TT Commons Medium";
+                max-height: 300px;
+                &::-webkit-scrollbar{
+                  width: 0;
+                }
+              }
+            } 
+            button{
+              margin-top: 12px;
+              padding: 10px 12px;
+              background-color: $primary_color;
+              border-radius: 5px;
+              cursor: pointer;
+              font-family: "TT Commons Bold";             
+              font-size: 16px;
+            }
+          }
+        }
       }
     }
   }
