--- a/src/scss/style.css
+++ b/src/scss/style.css
@@ -30,6 +30,23 @@
     width: 100%;
   }
 }
+@keyframes ellipsis-animation {
+  0% {
+    opacity: 0;
+  }
+  25% {
+    opacity: 1;
+  }
+  50% {
+    opacity: 0;
+  }
+  75% {
+    opacity: 1;
+  }
+  100% {
+    opacity: 0;
+  }
+}
 .entrance .swiper .swiper-slide .slide-content .content-inner a .curved-btn {
   margin: 20px 0;
   padding: 13px 20px;
@@ -2527,16 +2544,40 @@ header .header-bottom .header-main .right-side .menu-toggle {
   display: none;
 }
 
+body.o-hidden {
+  overflow: hidden;
+}
+
 .news {
   padding-top: 135px;
 }
 .news .common-title {
   margin-bottom: 20px;
-  text-align: center;
+  position: relative;
 }
 .news .common-title h1 {
   font-size: 20px;
+  margin-left: 10px;
   font-family: "TTFirsNeue Medium";
+}
+@media (min-width: 425px) {
+  .news .common-title {
+    text-align: center;
+  }
+  .news .common-title h1 {
+    margin-left: 0;
+  }
+}
+.news .common-title button {
+  position: absolute;
+  right: 20px;
+  top: 50%;
+  transform: translateY(-50%);
+  background-color: #FFC628;
+  padding: 12px 20px;
+  border-radius: 5px;
+  font-family: "TT Commons Bold";
+  cursor: pointer;
 }
 .news .context .news-list-total li {
   margin-bottom: 20px;
@@ -2587,6 +2628,7 @@ header .header-bottom .header-main .right-side .menu-toggle {
   }
   .news .common-title {
     margin-bottom: 50px;
+    text-align: center;
   }
   .news .common-title h1 {
     font-size: 54px;
@@ -2607,4 +2649,102 @@ header .header-bottom .header-main .right-side .menu-toggle {
   .news .context .more-details {
     font-size: 16px;
   }
+}
+
+.loader {
+  font-size: 20px;
+  text-align: center;
+}
+.loader.hide {
+  opacity: 0;
+  visibility: hidden;
+}
+
+.ellipsis {
+  animation: ellipsis-animation 2s linear infinite;
+  opacity: 0;
+}
+
+.news-modal {
+  position: absolute;
+  z-index: 999999;
+  width: 100%;
+  height: 100%;
+  top: 0;
+  left: 0;
+  bottom: 0;
+  right: 0;
+  background-color: rgba(0, 0, 0, 0.6196078431);
+  overflow: hidden;
+  opacity: 0;
+  visibility: hidden;
+  transition: all 0.2s cubic-bezier(0.52, 0.01, 0.16, 1);
+}
+.news-modal.show {
+  opacity: 1;
+  visibility: visible;
+}
+.news-modal .modal {
+  border: 8px solid #FFC628;
+  background-color: #FFC628;
+  border-radius: 10px;
+  max-width: 600px;
+  margin: 0 auto;
+  margin-top: 100px;
+}
+.news-modal .modal .modal-inner {
+  padding: 20px;
+  border-radius: 6px;
+  background-color: #fff;
+  position: relative;
+}
+.news-modal .modal .modal-inner .close-news-modal button {
+  position: absolute;
+  right: 5px;
+  top: 5px;
+  width: 16px;
+  cursor: pointer;
+}
+.news-modal .modal .modal-inner .close-news-modal button img {
+  filter: invert(1);
+}
+.news-modal .modal .modal-inner .modal-content .content-title {
+  text-align: center;
+}
+.news-modal .modal .modal-inner .modal-content .content-title h2 {
+  font-family: "TT Commons Bold";
+}
+.news-modal .modal .modal-inner .modal-content .content-text form {
+  display: flex;
+  flex-direction: column;
+}
+.news-modal .modal .modal-inner .modal-content .content-text form .group label {
+  display: block;
+  font-family: "TT Commons Medium";
+  font-size: 18px;
+  line-height: normal;
+}
+.news-modal .modal .modal-inner .modal-content .content-text form .group textarea {
+  display: block;
+  width: calc(100% - 24px);
+  min-height: 40px;
+  border-radius: 5px;
+  border: 1px solid #FFC628;
+  padding: 6px 12px;
+  resize: none;
+  font-size: 16px;
+  font-family: "TT Commons Medium";
+  max-height: 300px;
+}
+.news-modal .modal .modal-inner .modal-content .content-text form .group textarea::-webkit-scrollbar {
+  width: 0;
+}
+.news-modal .modal .modal-inner .modal-content .content-text form button {
+  margin-top: 12px;
+  padding: 10px 12px;
+  background-color: #FFC628;
+  border-radius: 5px;
+  cursor: pointer;
+  font-family: "TT Commons Bold";
+  font-size: 16px;
 }/*# sourceMappingURL=style.css.map */
