--- a/src/scss/pages/_news.scss
+++ b/src/scss/pages/_news.scss
@@ -1,4 +1,4 @@
-header .header-bottom .header-main .right-side .menu-toggle {
+.news_page .header-bottom .header-main .right-side .menu-toggle {
   display: none;
 }
 body {
