--- a/src/scss/partials/_variables.scss
+++ b/src/scss/partials/_variables.scss
@@ -11,3 +11,4 @@ $black_60:#00000099;
 $black_90: rgba(0,0,0, 0.9);
 $socials_bg_color:#F3F1F7;
 $white_color_f8:#f8f8f8;
+$card_border_color:#ececec;
