--- a/src/scss/common/_common.scss
+++ b/src/scss/common/_common.scss
@@ -49,7 +49,8 @@ h6 {
 }
 
 button,
-input,select {
+input,
+select {
   appearance: none;
   border: none;
   background-color: transparent;
@@ -119,7 +120,7 @@ body {
     .col {
       width: 50%;
       padding: 0 15px;
-      &:not(:last-child){
+      &:not(:last-child) {
         margin-bottom: 0px;
       }
     }
@@ -131,7 +132,9 @@ h3,
 h4 {
   font-weight: normal;
 }
-
+.curved-btn{
+  @extend %curved-btn;
+}
 .yelo-btn {
   @extend %yelo-btn;
 }
@@ -141,7 +144,7 @@ h4 {
 .arr-btn {
   @extend %arr-btn;
 }
-.news-link{
+.news-link {
   @extend %news-link;
 }
 .d-none {
@@ -150,4 +153,39 @@ h4 {
 .b-red {
   background-color: red;
   margin-top: 50px;
+}
+.s_title {
+  margin-top: 135px;
+  .page_title {
+    padding: 0 15px;
+    margin: 0 auto 20px;
+    text-align: center;
+    max-width: 1100px;
+    h1 {
+      font-size: 20px;
+      font-family: "TTFirsNeue Medium";
+    }
+    p {
+      color: $black_50;
+      max-width: 840px;
+      margin: 0 auto;
+      padding: 0 0 20px;
+      text-align: center;
+      line-height: 20px;
+    }
+  }
+  @media (min-width: 992px) {
+    margin-top: 150px;
+    .page_title {
+      padding: 0;
+      margin: 0 auto 50px auto;
+      h1 {
+        font-size: 54px;
+      }
+      p {
+        font-size: 22px;
+        line-height: 30px;
+      }
+    }
+  }
 }
