--- a/src/scss/pages/_cards.scss
+++ b/src/scss/pages/_cards.scss
@@ -6,6 +6,9 @@
       position: relative;
       background: no-repeat 190px 0px / auto 280px;
       background-color: #f1f1f1;
+      @media (min-width: 480px) {
+        background-position-x: 101%;
+      }
       &:not(:last-child) {
         margin-bottom: 15px;
       }
@@ -28,8 +31,8 @@
         .c_spec {
           padding: 20px 0;
           .c_item {
-            &:not(:last-child){
-                margin: 0 0 10px 0;
+            &:not(:last-child) {
+              margin: 0 0 10px 0;
             }
             p {
               line-height: normal;
@@ -89,14 +92,36 @@
           left: auto;
           right: 135px;
           width: auto;
+          perspective: 630px;
+          transform-style: preserve-3d;
           .c_image_inner {
             width: 210px;
             height: 333px;
             border-radius: 15px;
-            transform-style: preserve-3d;
+            transition: all 0.2s ease-out;
+            position: relative;
             img {
               border-radius: 15px;
               box-shadow: 0 2px 8px rgba(14, 21, 47, 0.25);
+            }
+            &:hover {
+              img {
+                box-shadow: 0 45px 100px rgba(14, 21, 47, 0.3),
+                  0 16px 50px rgba(14, 21, 47, 0.3);
+              }
+            }
+            .shine {
+              position: absolute;
+              top: 0;
+              left: 0;
+              right: 0;
+              bottom: 0;
+              border-radius: 15px;
+              background: linear-gradient(
+                135deg,
+                rgba(255, 255, 255, 0.25) 0%,
+                rgba(255, 255, 255, 0) 60%
+              );
             }
           }
         }
@@ -137,7 +162,8 @@
                 margin-right: 20px;
               }
               .more-details {
-                width: 180px;
+                width: 200px;
+                justify-content: flex-start;
               }
             }
           }
