--- a/src/scss/style.css
+++ b/src/scss/style.css
@@ -2594,6 +2594,11 @@ section {
   background: no-repeat 190px 0px/auto 280px;
   background-color: #f1f1f1;
 }
+@media (min-width: 480px) {
+  #cards .cards .card {
+    background-position-x: 101%;
+  }
+}
 #cards .cards .card:not(:last-child) {
   margin-bottom: 15px;
 }
@@ -2671,16 +2676,31 @@ section {
     left: auto;
     right: 135px;
     width: auto;
+    perspective: 630px;
+    transform-style: preserve-3d;
   }
   #cards .cards .card .c_image .c_image_inner {
     width: 210px;
     height: 333px;
     border-radius: 15px;
-    transform-style: preserve-3d;
+    transition: all 0.2s ease-out;
+    position: relative;
   }
   #cards .cards .card .c_image .c_image_inner img {
     border-radius: 15px;
     box-shadow: 0 2px 8px rgba(14, 21, 47, 0.25);
+  }
+  #cards .cards .card .c_image .c_image_inner:hover img {
+    box-shadow: 0 45px 100px rgba(14, 21, 47, 0.3), 0 16px 50px rgba(14, 21, 47, 0.3);
+  }
+  #cards .cards .card .c_image .c_image_inner .shine {
+    position: absolute;
+    top: 0;
+    left: 0;
+    right: 0;
+    bottom: 0;
+    border-radius: 15px;
+    background: linear-gradient(135deg, rgba(255, 255, 255, 0.25) 0%, rgba(255, 255, 255, 0) 60%);
   }
   #cards .cards .card .c_about {
     margin: 0;
@@ -2719,7 +2739,8 @@ section {
     margin-right: 20px;
   }
   #cards .cards .card .c_about ul li .more-details {
-    width: 180px;
+    width: 200px;
+    justify-content: flex-start;
   }
 }
 
