--- a/src/scss/pages/_loans.scss
+++ b/src/scss/pages/_loans.scss
@@ -33,7 +33,7 @@
 
     .consumption {
       .f_inner {
-        max-width: 600px;
+        max-width: 650px;
         margin: 0 auto;
         padding: 20px;
         .form_calc {
@@ -138,21 +138,37 @@
               }
             }
           }
-          .lc_self{
-            @include Flexible($j-cont:space-between);
+          .lc_self {
+            @include Flexible($j-cont: space-between);
             padding: 20px 0 10px;
-            .lc_item{
+            .lc_item {
               width: 33.33333%;
               padding: 0 10px;
-              &:not(:last-child){
+              &:not(:last-child) {
                 border-right: 1px solid $card_border_color;
               }
               text-align: center;
-              p{
+              p {
                 color: $black_50;
               }
-              
             }
+          }
+        }
+        .form_error {
+          position: absolute;
+          background: #ff7777;
+          color: white;
+          border-radius: 5px;
+          z-index: 2;
+          padding: 3px 10px 0;
+          left: 20px;
+          bottom: -10px;
+          font-size: 14px;
+          opacity: 0;
+          visibility: hidden;
+          &.show{
+            opacity: 1;
+            visibility: visible;
           }
         }
         .form_group {
@@ -160,6 +176,7 @@
           border-radius: 10px;
           margin: 20px 0 15px 0;
           .form_item {
+            position: relative;
             &:not(:last-child) {
               border-bottom: 1px solid $card_border_color;
             }
@@ -175,6 +192,7 @@
         .form_line {
           .form_item {
             margin-bottom: 15px;
+            position: relative;
             input {
               padding: 0 20px;
               border: 1px solid $card_border_color;
@@ -182,6 +200,9 @@
               border-radius: 10px;
               height: 55px;
               font-size: 16px;
+              &.alert {
+                box-shadow: inset 0 0 0 1px #f00;
+              }
             }
             select {
               height: 55px;
@@ -228,19 +249,18 @@
                 }
               }
             }
-            .lc_self{
+            .lc_self {
               padding: 30px 0;
-              .lc_item{
+              .lc_item {
                 width: 33.33333%;
                 padding: 0 10px;
-                &:not(:last-child){
+                &:not(:last-child) {
                   border-right: 1px solid $card_border_color;
                 }
                 text-align: center;
-                p{
+                p {
                   color: $black_50;
                 }
-                
               }
             }
           }
@@ -264,10 +284,11 @@
             gap: 20px;
             .form_item {
               width: 100%;
-              input {
+              input,select {
                 height: 65px;
                 font-size: 18px;
               }
+              
             }
           }
           .f_bottom {
@@ -279,6 +300,7 @@
             }
             .yelo-btn {
               width: 33.3333%;
+              height: 65px;
             }
           }
         }
