--- a/src/scss/style.css
+++ b/src/scss/style.css
@@ -2774,7 +2774,7 @@ section {
   }
 }
 #cards .cards .consumption .f_inner {
-  max-width: 600px;
+  max-width: 650px;
   margin: 0 auto;
   padding: 20px;
 }
@@ -2900,10 +2900,30 @@ section {
 #cards .cards .consumption .f_inner .form_calc .lc_self .lc_item p {
   color: rgba(0, 0, 0, 0.5019607843);
 }
+#cards .cards .consumption .f_inner .form_error {
+  position: absolute;
+  background: #ff7777;
+  color: white;
+  border-radius: 5px;
+  z-index: 2;
+  padding: 3px 10px 0;
+  left: 20px;
+  bottom: -10px;
+  font-size: 14px;
+  opacity: 0;
+  visibility: hidden;
+}
+#cards .cards .consumption .f_inner .form_error.show {
+  opacity: 1;
+  visibility: visible;
+}
 #cards .cards .consumption .f_inner .form_group {
   border: 1px solid #ececec;
   border-radius: 10px;
   margin: 20px 0 15px 0;
+}
+#cards .cards .consumption .f_inner .form_group .form_item {
+  position: relative;
 }
 #cards .cards .consumption .f_inner .form_group .form_item:not(:last-child) {
   border-bottom: 1px solid #ececec;
@@ -2917,6 +2937,7 @@ section {
 }
 #cards .cards .consumption .f_inner .form_line .form_item {
   margin-bottom: 15px;
+  position: relative;
 }
 #cards .cards .consumption .f_inner .form_line .form_item input {
   padding: 0 20px;
@@ -2925,6 +2946,9 @@ section {
   border-radius: 10px;
   height: 55px;
   font-size: 16px;
+}
+#cards .cards .consumption .f_inner .form_line .form_item input.alert {
+  box-shadow: inset 0 0 0 1px #f00;
 }
 #cards .cards .consumption .f_inner .form_line .form_item select {
   height: 55px;
@@ -3007,7 +3031,7 @@ section {
   #cards .cards .consumption .f_inner .form_line .form_item {
     width: 100%;
   }
-  #cards .cards .consumption .f_inner .form_line .form_item input {
+  #cards .cards .consumption .f_inner .form_line .form_item input, #cards .cards .consumption .f_inner .form_line .form_item select {
     height: 65px;
     font-size: 18px;
   }
@@ -3022,6 +3046,7 @@ section {
   }
   #cards .cards .consumption .f_inner .f_bottom .yelo-btn {
     width: 33.3333%;
+    height: 65px;
   }
 }
 
